tests/machine/x/fortran/while_loop.f90
program main
  implicit none
  i = 0
  do while ((i < 3))
    print *, i
    i = (i + 1)
  end do
end program main
